Fix for bg image on mobile

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -25,16 +25,22 @@ footer {
 }
 
 #training {
-	background: #f4f4f4 url(../images/pexels-photo-129208.jpeg) /*center center no-repeat*/ fixed;
+	background: #f4f4f4 url(../images/pexels-photo-129208.jpeg) center center no-repeat fixed;
  	background-size: cover;
 }
+/*Change background-attachment to scroll on mobile devices to avoid image being blown up*/
+@media screen and (max-device-width: 1024px){
+	#training {
+ 	background-attachment: scroll;
+	}
+}
+
 section .dark-mask {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  /*background: #000;*/
   background: #428bca;
   opacity: 0.5;
   filter: alpha(opacity=50);
